HW9/fix issue
